--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"prettier": "prettier --write .",
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"core-js": "^3.8.3",
@@ -16,6 +17,9 @@
 		"vuex": "^4.0.0"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.0.2",
+		"@commitlint/config-conventional": "^17.0.2",
+		"@commitlint/prompt-cli": "^17.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
 		"@vue/cli-plugin-babel": "~5.0.0",
@@ -30,6 +34,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-vue": "^8.0.3",
+		"husky": "^8.0.1",
 		"lint-staged": "^11.1.2",
 		"prettier": "^2.4.1",
 		"sass": "^1.32.7",
@@ -40,7 +45,7 @@
 		"pre-commit": "lint-staged"
 	},
 	"config": {
-		"commitizen":{
+		"commitizen": {
 			"path": "node_modules/cz-customizable"
 		}
 	}
