--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.0.1",
+		"axios": "^0.27.2",
 		"core-js": "^3.8.3",
+		"element-plus": "^2.2.2",
+		"normalize.css": "^8.0.1",
+		"svg-sprite-loader": "^6.0.11",
 		"vue": "^3.2.13",
 		"vue-class-component": "^8.0.0-0",
 		"vue-router": "^4.0.3",
@@ -39,7 +44,9 @@
 		"prettier": "^2.4.1",
 		"sass": "^1.32.7",
 		"sass-loader": "^12.0.0",
-		"typescript": "~4.5.5"
+		"typescript": "~4.5.5",
+		"unplugin-auto-import": "^0.8.6",
+		"unplugin-vue-components": "^0.19.6"
 	},
 	"gitHooks": {
 		"pre-commit": "lint-staged"
